--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,17 +1,9 @@
 
-$color1: #07AF85;
-$gradient1: linear-gradient(to right, #A388A8 0%, #CA8D98 25%, #D8A994 50%, $color1 100%);
+$danger: #BF0B0B;
+$success: #07AF85;
+$info: #1A8CE7;
+$warning: #fff700;
 
-$red: #BF0B0B;
-$green: #07AF85;
-$blue: #1A8CE7;
-
-$grey-text: #888;
-$grey-lighter: #ddd;
-$grey-light: #bbb;
-$white-smoke: #f5f5f5;
-
-$footer-background-color: #414141;
 $footer-height: 75px;
 $navbar-height: 4rem;
 $sidebar-width: 250px;
