--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -1,3 +1,9 @@
-.layoutContainer {
-
+.layout {
+  display: flex;
+  & > .main {
+    flex-grow: 1;
+    & > .children {
+      padding: 0 20px;
+    }
+  }
 }
