--- a/src/components/SideMenu/style.module.scss
+++ b/src/components/SideMenu/style.module.scss
@@ -1,3 +1,20 @@
 .sideMenuContainer {
-  
+  width: max-content;
+  height: 100vh;
+  background: #1d2332;
+  color: white;
+  padding: 0 10px;
+  & > .menuList {
+    padding: 0;
+  }
+}
+
+.logo {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  & > img {
+    width: 80px;
+    height: auto;
+  }
 }
