--- a/src/components/TopMenu/style.module.scss
+++ b/src/components/TopMenu/style.module.scss
@@ -1,11 +1,6 @@
-.topMenuContainer {
-  .hamburgerButton {
-    
-  }
-  .logo {
-    img {
-      width: 50px;
-      height: auto;
-    }
-  }
+.topMenu {
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+  height: 60px;
+
 }
