--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -3,6 +3,8 @@
   & > .main {
     flex-grow: 1;
     & > .children {
+      margin-top: 80px;
+      margin-left: 250px;
       padding: 0 20px;
     }
   }
