--- a/src/components/SideMenu/style.module.scss
+++ b/src/components/SideMenu/style.module.scss
@@ -17,23 +17,23 @@
   width: 250px;
   height: 100vh;
   background: #1d2332;
-  padding-top: 100px;
+  padding-top: 90px;
   color: #ddd;
   & > .menuLabel {
-    padding: 0 10px;
+    padding: 0 15px;
     font-size: .75em;
     text-transform: uppercase;
     letter-spacing: .1em;
   }
   & > .menuList {
-    padding: 0 10px;
+    padding: 0 15px;
     & > a {
       border-radius: 2px;
       display: block;
       padding: .5em .75em;
       color: #ddd;
       text-decoration: none;
-      &:hover {
+      &:hover, &.active {
         background-color: #f5f5f5;
         color: #363636;
       }
@@ -76,5 +76,6 @@
   display: flex;
   align-items: center;
   padding: 0 20px;
+  color: white;
   cursor: pointer;
 }
