--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -5,9 +5,20 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  &.fixed {
+    position: fixed;
+    margin-top: -74px;
+  }
   & > h1 {
     font-size: 2rem;
     font-weight: 600;
     color: #363636;
+    &:first-letter {
+      text-transform: uppercase;
+    }
   }
+}
+
+.headerSpace {
+  height: 10px;
 }
