--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -2,7 +2,12 @@
 $danger: #BF0B0B;
 $success: #07AF85;
 $info: #1A8CE7;
-$warning: #fff700;
+$warning: #ffdd57;
+
+$border-color: #ddd;
+$default-border: 1px solid $border-color;
+
+$border-radius: 2px;
 
 $footer-height: 75px;
 $navbar-height: 4rem;
