--- a/src/components/Table/style.module.scss
+++ b/src/components/Table/style.module.scss
@@ -14,3 +14,11 @@
     padding: 10px 0;
   }
 }
+
+.actions {
+  display: flex;
+  justify-content: flex-end;
+  & > button {
+    margin: 0 10px;
+  }
+}
