--- a/src/components/Table/style.module.scss
+++ b/src/components/Table/style.module.scss
@@ -9,6 +9,7 @@
     border-bottom: 2px solid #ddd;
     text-align: left;
     text-transform: capitalize;
+    background: #fdfdfd;
   }
   td {
     padding: 10px 0;
