--- a/src/components/Title/style.module.scss
+++ b/src/components/Title/style.module.scss
@@ -1,3 +1,4 @@
+@import "~style/mixins";
 
 .title {
   display: flex;
@@ -9,6 +10,9 @@
     position: fixed;
     top: -3px;
     left: 280px;
+    @include breakpoint(mobile) {
+      left: 70px;
+    }
   }
   & > h1 {
     font-size: 2rem;
