--- a/src/components/SideMenu/styles.scss
+++ b/src/components/SideMenu/styles.scss
@@ -7,7 +7,7 @@
   display: flex;
 }
 
-.sideMenuSpace {
+.sideMenu__space {
   transition: margin-left 0.5s;
   width: 250px;
   @include breakpoint(mobile) {
@@ -23,21 +23,22 @@
   background: #1d2332;
   padding-top: 90px;
   color: #ddd;
-  & > .menuLabel {
+  .sideMenu__menuLabel {
     padding: 0 15px;
-    font-size: .75em;
+    font-size: 0.75em;
     text-transform: uppercase;
-    letter-spacing: .1em;
+    letter-spacing: 0.1em;
   }
-  & > .menuList {
+  .sideMenu__menuList {
     padding: 0 15px;
     & > a {
       border-radius: 2px;
       display: block;
-      padding: .5em .75em;
+      padding: 0.5em 0.75em;
       color: #ddd;
       text-decoration: none;
-      &:hover, &.active {
+      &:hover,
+      &.sideMenu__active {
         background-color: #f5f5f5;
         color: #363636;
       }
@@ -66,13 +67,13 @@
   }
 }
 
-.hamburgerCheckbox {
+.hamburger__checkbox {
   display: none;
   &:checked ~ aside {
     margin-left: -250px;
   }
 }
-.hamburgerButton {
+.hamburger__button {
   position: fixed;
   top: 0;
   left: 0;
